--- a/sample portifolio/index.html
+++ b/sample portifolio/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personal portifolio</title>
     <link rel="stylesheet" href="src/styles/styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     
@@ -33,6 +34,14 @@
                     <a href="#">Sobre Mim</a>
                     <a href="#">Contato</a>
                 </div>
+
+                <div class="home-sci">
+                    <a href="#"><i class='bx bxl-github' ></i></a>
+                    <a href="#"><i class='bx bxl-instagram' ></i></a>
+                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                </div>
+
+                <span class="home-imgHover"></span>
         </div>
     </section>
 </body>
